Comments finished for experiement notebooks

--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -51,7 +51,9 @@
     "batch_size = 128\n",
     "\n",
     "# Load datasets from current _split folders\n",
+    "# Load the Museum data set\n",
     "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces_split\", image_size, batch_size, None, False, False)\n",
+    "# Load the FairFace data set\n",
     "(ffds_train, fftrain_batches, ffds_val, ffval_batches, ffds_test, fftest_batches, ffcount_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/FairFace_split\", image_size, batch_size, None, False, False)\n"
    ]
   },
@@ -103,7 +105,8 @@
    "id": "dc9c32f7-de91-4afb-b1ee-b206414a6089",
    "metadata": {},
    "source": [
-    "# Museum baseline"
+    "# Museum baseline\n",
+    "Baseline experiments to find how the Xception model performs on the Museum data set with and without bias mitigation methods"
    ]
   },
   {
@@ -593,10 +596,10 @@
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
     "# Choose the directory where model Xception_FairFace.h5 exists\n",
-    "dir_name = \"XXX_XXX_Xception_Fairface\"\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set without reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -605,13 +608,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 137\n",
-    "utils.freezeCertainLayers(model, 134)    \n",
+    "# Freeze layers\n",
+    "utils.freezeCertainLayers(model, 122)    \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -629,6 +633,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -642,10 +647,10 @@
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
     "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set without reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -655,6 +660,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)"
@@ -671,6 +677,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Xception\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -693,11 +700,11 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -706,13 +713,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 137 \n",
-    "utils.freezeCertainLayers(model, 134)  \n",
+    "# Freeze layers\n",
+    "utils.freezeCertainLayers(model, 122)  \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -730,6 +738,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -742,11 +751,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -756,6 +765,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)"
@@ -772,6 +782,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Xception_aug\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -794,11 +805,12 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_re.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_re\"\n",
+    "\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_re.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -807,13 +819,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 137    \n",
-    "utils.freezeCertainLayers(model, 134)   \n",
+    "# Freeze layers   \n",
+    "utils.freezeCertainLayers(model, 122)   \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -831,6 +844,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -843,11 +857,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_re.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_re\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_re.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -857,6 +871,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), class_weight, 5, 20)"
@@ -873,6 +888,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Xception_re\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -895,11 +911,11 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -908,13 +924,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 137    \n",
-    "utils.freezeCertainLayers(model, 134)  \n",
+    "# Freeze layers    \n",
+    "utils.freezeCertainLayers(model, 128)  \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -932,6 +949,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -944,11 +962,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/Xception_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -958,6 +976,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), class_weight, 5, 20)"
@@ -974,6 +993,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_Xception_re_aug\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   }
