--- a/EfficientNet.ipynb
+++ b/EfficientNet.ipynb
@@ -51,7 +51,9 @@
     "batch_size = 128\n",
     "\n",
     "# Load datasets from current _split folders\n",
+    "# Load the Museum data set\n",
     "(ds_train, train_batches, ds_val, val_batches, ds_test, test_batches, count_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces_split\", image_size, batch_size, None, False, False)\n",
+    "# Load the FairFace data set\n",
     "(ffds_train, fftrain_batches, ffds_val, ffval_batches, ffds_test, fftest_batches, ffcount_classes) = ir.readData(\"/mimer/NOBACKUP/groups/snic2022-22-1091/FairFace_split\", image_size, batch_size, None, False, False)\n"
    ]
   },
@@ -103,7 +105,8 @@
    "id": "e80997c9-94db-402b-8999-9a389a07eb5d",
    "metadata": {},
    "source": [
-    "# Museum baseline"
+    "# Museum baseline\n",
+    "Baseline experiments to find how the EfficientNet model performs on the Museum data set with and without bias mitigation methods"
    ]
   },
   {
@@ -592,10 +595,10 @@
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
     "# Choose the directory where model EfficientNet_FairFace.h5 exists\n",
-    "dir_name = \"XXX_XXX_EfficientNet_Fairface\"\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set without reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -604,13 +607,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 338\n",
+    "# Freeze layers\n",
     "utils.freezeCertainLayers(model, 334)    \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -628,6 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -641,10 +646,10 @@
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
     "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set without reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -654,6 +659,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (299,299), None, 5, 20)"
@@ -670,6 +676,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_EfficientNet\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -692,11 +699,11 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -705,13 +712,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 338 \n",
+    "# Freeze layers\n",
     "utils.freezeCertainLayers(model, 334)  \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model without class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, None, False)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -729,6 +737,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -741,11 +750,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -755,6 +764,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), None, 5, 20)"
@@ -771,6 +781,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_EfficientNet_aug\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -793,11 +804,11 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace_re.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface_re\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace_re.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -806,13 +817,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 338    \n",
+    "# Freeze layers   \n",
     "utils.freezeCertainLayers(model, 334)   \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -830,6 +842,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -842,11 +855,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace_re.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface_re\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with reweighting and without augmentation layers\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace_re.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -856,6 +869,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), class_weight, 5, 20)"
@@ -872,6 +886,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_EfficientNet_re\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   },
@@ -894,11 +909,11 @@
     "class_weight = mit.findClassWeights(train_batches)\n",
     "\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model EfficientNet_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_EfficientNet_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/EfficinetNet_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -907,13 +922,14 @@
     "        decay_rate=0.96,\n",
     "    )\n",
     "\n",
-    "# Total number of layers: 338    \n",
+    "# Freeze layers\n",
     "utils.freezeCertainLayers(model, 334)  \n",
     "    \n",
     "model.compile(optimizer=tf.keras.optimizers.Adam(learning_rate=lr_schedule), \n",
     "                           loss=\"binary_crossentropy\", \n",
     "                           metrics=metric_list)\n",
     "\n",
+    "# Train model with class weights\n",
     "utils.train_model(model, epochs, ds_train, train_batches, ds_val, val_batches, class_weight)\n",
     "\n",
     "print(\"Make folder...\")\n",
@@ -931,6 +947,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Test the model\n",
     "test_predict, test_labels, dir_name = ev.testModel(model, ds_test, test_batches, dir_name)\n",
     "ev.testModelWithThresholdChange(model, ds_val, val_batches, test_predict, test_labels, dir_name)"
    ]
@@ -943,11 +960,11 @@
    "outputs": [],
    "source": [
     "strategy = tf.distribute.MirroredStrategy()\n",
-    "# Choose correct folder name\n",
-    "dir_name = \"Test\"\n",
+    "# Choose the directory where model Xception_FairFace_aug.h5 exists\n",
+    "dir_name = \"XXXXXXXX_XXXXXX_Xception_Fairface_aug\"\n",
     "\n",
     "with strategy.scope():\n",
-    "    # Choose the correct FairFace model\n",
+    "    # Load base model trained on FairFace data set with augmentation layers and without reweighting\n",
     "    model = utils.loadModel(dir_name + \"/EfficientNet_FairFace_aug.h5\", m.metrics_dict())\n",
     "    metric_list = m.metrics_list()\n",
     "    lr_schedule = tf.keras.optimizers.schedules.ExponentialDecay(\n",
@@ -957,6 +974,7 @@
     "        staircase=True\n",
     "    )\n",
     "\n",
+    "# Crossvalidate model using entire Museum data set\n",
     "history = ev.kfoldCrossValidation('/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Female/*.*', \n",
     "                      '/mimer/NOBACKUP/groups/snic2022-22-1091/museumFaces/Male/*.*',\n",
     "                      model, metric_list, lr_schedule, (300,300), class_weight, 5, 20)"
@@ -973,6 +991,7 @@
     "dir_name = datetime.datetime.now().strftime(\"%Y%m%d_%H%M%S\") + \"_kFoldCrossValidation_EfficientNet_re_aug\"\n",
     "os.mkdir(dir_name)\n",
     "\n",
+    "# Evaluate the results of the crossvalidation\n",
     "ev.evaluateCrossValidation(dir_name, history)"
    ]
   }
