Added comments to EfficientNet notebook

--- a/Xception.ipynb
+++ b/Xception.ipynb
@@ -5,7 +5,9 @@
    "id": "c19182a3",
    "metadata": {},
    "source": [
-    "# Testing Xception"
+    "# Notebook for running Xception experiments\n",
+    "Contributions: Christoph Nötzli, Erik Norén and Sushruth Badri <br>\n",
+    "Comments: Erik Norén 14/12-22"
    ]
   },
   {
